--- a/naedam2/src/main/resources/application.properties
+++ b/naedam2/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.mvc.view.suffix=.jsp
 
 # datasource
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1522:xe
-spring.datasource.username=spring
-spring.datasource.password=spring
+spring.datasource.url=jdbc:oracle:thin:@db202203142118_high?TNS_ADMIN=C:/dev/Wallet_DB202203142118
+spring.datasource.username=ADMIN
+spring.datasource.password=naedamProject1234
 
 # mybatis
 mybatis.configuration.jdbc-type-for-null=NULL
