--- a/naedam2/pom.xml
+++ b/naedam2/pom.xml
@@ -73,7 +73,7 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.0</version>
-
+		</dependency>
 		
 		<!-- 오라클 클라우드 관련 -->
 		<dependency>
