--- a/naedam2/pom.xml
+++ b/naedam2/pom.xml
@@ -92,7 +92,12 @@
 		    <version>21.3.0.0</version>
 
 		</dependency>
-		
+		<!-- jstl -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
