--- a/naedam2/src/main/resources/application.properties
+++ b/naedam2/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 #server.port=10000
 #server.servlet.context-path=/springboot
 
-#jsp 설정
+#jsp 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
@@ -20,4 +20,3 @@ mybatis.mapper-locations=classpath*:mapper/**/*.xml
 
 # logging
 logging.level.com.naedam.mir9==debug
-
